--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -1,4 +1,64 @@
-.test {
-  color: blue;
+.ol-map {
+  min-width: 600px;
+  min-height: 500px;
+  margin: 50px;
+  height: 500px;
+  width: "100%";
+}
+
+.ol-control {
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 4px;
+  padding: 2px;
+}
+
+.ol-full-screen {
+  top: .5em;
+  right: .5em;
+}
+
+.app {
+  background-color: #209cee;
+  padding: 30px;
+  height: 100vh;
+}
+
+.todo-list {
+  background-color: white;
+  border-radius: 4px;
+  padding: 5px;
+  max-width: 400px;
+}
+
+.todo {
+  background-color: white;
+  -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
+          box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
+  padding: 5px;
+  font-size: 12px;
+  margin-bottom: 6px;
+  border-radius: 3px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.input {
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border: 0;
+  border-radius: 4px;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  padding: 1rem;
+  height: 2.25em;
 }
 /*# sourceMappingURL=main.css.map */
