--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -1,23 +1,3 @@
-.ol-map {
-  min-width: 600px;
-  min-height: 500px;
-  margin: 50px;
-  height: 500px;
-  width: "100%";
-}
-
-.ol-control {
-  position: absolute;
-  background-color: rgba(255, 255, 255, 0.4);
-  border-radius: 4px;
-  padding: 2px;
-}
-
-.ol-full-screen {
-  top: .5em;
-  right: .5em;
-}
-
 .app {
   background-color: #209cee;
   padding: 30px;
@@ -60,5 +40,98 @@
           box-shadow: none;
   padding: 1rem;
   height: 2.25em;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a h5 {
+  color: red;
+}
+
+/*Form */
+.sv-form-field-required {
+  color: red;
+}
+
+/*Modal */
+.modal-content {
+  max-height: 750px;
+}
+
+.modal-content .modal-body {
+  overflow: auto;
+}
+
+.modal-content .modal-body ::-webkit-scrollbar-thumb {
+  background: red;
+  border-radius: 10px;
+}
+
+/* end */
+/* Button */
+.open-form {
+  width: 100%;
+}
+
+/* end */
+/* Works on Firefox */
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 7px;
+}
+
+*::-webkit-scrollbar-track {
+  background: gray;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #fd5151;
+  border-radius: 20px;
+  border: 3px solid #fd5151;
+}
+
+.sv-login a {
+  font-size: 1.5rem;
+}
+
+.a-divider-break {
+  text-align: center;
+  position: relative;
+  top: 2px;
+  padding-top: 1px;
+  margin-bottom: 14px;
+  line-height: 0;
+}
+
+.a-divider-break h5 {
+  line-height: 1;
+  font-size: 12px;
+  color: #767676;
+  font-weight: 400;
+  z-index: 2;
+  position: relative;
+  display: inline-block;
+  background-color: #fff;
+  padding: 0 8px 0 7px;
+}
+
+.a-divider-break:after {
+  content: "";
+  width: 100%;
+  background-color: transparent;
+  display: block;
+  height: 1px;
+  border-top: 1px solid #e7e7e7;
+  position: absolute;
+  top: 50%;
+  margin-top: -3px;
+  z-index: 1;
 }
 /*# sourceMappingURL=main.css.map */
