--- a/src/static/scss/main.scss
+++ b/src/static/scss/main.scss
@@ -1,4 +1,4 @@
-@import "./map.scss";
+
 
 .app {
     background-color: #209cee;
@@ -26,7 +26,7 @@
 
 }
 
-.input {
+.input { 
     width: 100%;
     box-sizing: border-box;
     border: 0;
@@ -35,5 +35,107 @@
     padding: 1rem;
     height: 2.25em;
 }
+
+a {
+    color:black;
+    text-decoration: none;
+
+    &:hover{
+        text-decoration: none;
+    }
+
+    h5 {
+        
+        color:red;
+    }
+}
+
+/*Form */
+
+.sv-form-field-required {
+    color:red;
+}
+
+/*Modal */
+
+.modal-content {
+    max-height: 750px;
+    .modal-body  {
+        overflow: auto;
+        ::-webkit-scrollbar-thumb {
+            background: red; 
+            border-radius: 10px;
+          }
+    }
+}
+
+
+/* end */
+
+
+/* Button */ 
+
+.open-form {
+    width: 100%;
+}
+/* end */
+
+/* Works on Firefox */
+
+  
+  /* Works on Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 7px;
+  }
+  
+  *::-webkit-scrollbar-track {
+    background: gray;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    background-color: rgb(253, 81, 81);
+    border-radius: 20px;
+    border: 3px solid rgb(253, 81, 81);
+  }
+
+.sv-login {
+    a {
+        font-size: 1.5rem;
+    }
+}
+
+
+    .a-divider-break {
+        text-align: center;
+        position: relative;
+        top: 2px;
+        padding-top: 1px;
+        margin-bottom: 14px;
+        line-height: 0; 
+        h5 {
+            line-height: 1;
+            font-size: 12px;
+            color: #767676;
+            font-weight: 400;
+            z-index: 2;
+            position: relative;
+            display: inline-block;
+            background-color: #fff;
+            padding: 0 8px 0 7px;
+        }
+
+        &:after{
+                content: "";
+                width: 100%;
+                background-color: transparent;
+                display: block;
+                height: 1px;
+                border-top: 1px solid #e7e7e7;
+                position: absolute;
+                top: 50%;
+                margin-top: -3px;
+                z-index: 1;
+        }
+    }
 
 
