--- a/src/static/scss/main.scss
+++ b/src/static/scss/main.scss
@@ -1,12 +1,13 @@
 
-
+@import "./vertical-menu.scss";
+ 
 .app {
     background-color: #209cee;
     padding: 30px;
-    height: 100vh;
+    height: 100vh; 
 }
 
-.todo-list {
+.todo-list { 
     background-color: white;
     border-radius: 4px;
     padding: 5px;
@@ -126,8 +127,8 @@ a {
 
         &:after{
                 content: "";
-                width: 100%;
-                background-color: transparent;
+                width: 100%; 
+                background-color: transparent; 
                 display: block;
                 height: 1px;
                 border-top: 1px solid #e7e7e7;
@@ -137,17 +138,57 @@ a {
                 z-index: 1;
         }
     }
-
-    nav {
-        .navbar-brand {
-            &:hover{
-                color:red!important;
-            }
+   
+    .nav-link {
+        &:hover{
+            color:red!important;
         }
     }
+
+
 
 
 /* Slider  on off*/ 
 
 
+.mini-submenu{
+  display:none;  
+  background-color: rgba(255, 255, 255, 0.46);
+  border: 1px solid rgba(0, 0, 0, 0.9);
+  border-radius: 4px;
+  padding: 9px;  
+  width: 42px;
+  text-align: center;
+    &:hover{
+        cursor: pointer;
+    }
+}
+
+.mini-submenu-left {
+  position: absolute;
+  top: 60px;
+  left: .5em;
+  z-index: 40;
+}
+
+.sidebar { 
+    z-index: 45; 
+}
+
+.main-row { 
+    position: relative; 
+    top: 0; 
+}
+
+.slide-submenu{
+  background: rgba(0, 0, 0, 0.45);
+  display: inline-block;
+  padding: 0 8px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
 /* end slider on off*/
+
+
+/*vm*/
