--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -184,6 +184,24 @@ a h5 {
   cursor: pointer;
 }
 
+.nav-link {
+  color: rgba(0, 0, 0, 0.5) !important;
+}
+
+.sv-background {
+  color: red !important;
+  text-transform: uppercase;
+}
+
+.sv-background-blue {
+  color: blue !important;
+  text-transform: uppercase;
+}
+
 /* end slider on off*/
 /*vm*/
+/*todolist*/
+.sv-border {
+  border: 1px solid black;
+}
 /*# sourceMappingURL=main.css.map */
